<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"

    tools:context=".PredictActivity">

    <TextView
        android:id="@+id/textSeason"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_below="@+id/textSoil"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="17dp"
        android:text="@string/Season"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSoil"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:text="@string/soil_type"
        android:textAlignment="center"

        android:textSize="20sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/textState"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:layout_below="@+id/textSoil"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:text="@string/state"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/soilType"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_toEndOf="@+id/textSoil"
        android:layout_marginTop="96dp"
        android:autofillHints="name"
        android:hint="@string/soil"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:layout_below="@+id/soilType"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toEndOf="@+id/textState" />

    <Spinner
        android:id="@+id/spinnerSeason"
        android:layout_width="169dp"
        android:layout_height="51dp"
        android:layout_below="@+id/spinnerState"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="47dp"
        android:layout_toEndOf="@id/textSeason" />

    <TextView
        android:id="@+id/textRecommendation"
        android:layout_width="307dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textSeason"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/crop_recommendation"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>